--- a/index.html
+++ b/index.html
@@ -757,5 +757,29 @@
 
     </script>
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyB20BwcVcwBBLQc8p-hPH6v2dd1Ag8uvgk",
+    authDomain: "kentakitris.firebaseapp.com",
+    databaseURL: "https://kentakitris-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "kentakitris",
+    storageBucket: "kentakitris.firebasestorage.app",
+    messagingSenderId: "813070706725",
+    appId: "1:813070706725:web:50bdddc7bdfa897ab877cc",
+    measurementId: "G-DMJSY5GMQS"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
