--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Tetris</title>
-    <!-- Load Tailwind CSS for utility classes -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Load custom CSS -->
+    <!-- Load custom CSS with Tailwind -->
     <link rel="stylesheet" href="index.css">
     <!-- Load Firebase initialization script -->
     <script type="module" src="js/index-firebase-init.js"></script>
